# OpenSC

./: Makefile.am  appveyor.yml  configure.ac
tests/: CMakeLists.txt  Makefile.am  common.c  common.h  common_functions.sh  cryptoflex_test.sh  loader.c  loader.h  pkcs15_test.sh  test_card.sh  test_helpers.c  test_helpers.h  test_suits.c  test_suits.h  yubico_test.sh
tests/cmake/Modules/: FindCMocka.cmake
tests/libs/: cryptoki.h  pkcs11.h
tests/resources/: cert.der  cert.pem  message_to_decrypt.dec  message_to_encrypt.txt  message_to_hash.txt  message_to_sign.signature  message_to_sign.txt  private_key.key  private_key.pem  public_key.key  public_key.pem
